# GeoGuessrMCP

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  dependency-review.yml
scripts/: deploy.sh
src/: server.py
src/geoguessr_mcp/: __init__.py  config.py  main.py
src/geoguessr_mcp/api/: __init__.py  client.py  dynamic_response.py  endpoints.py  geoguessr_client.py
src/geoguessr_mcp/auth/: __init__.py  multi_user_session.py  request_context.py  session.py  user_context.py
src/geoguessr_mcp/middleware/: __init__.py  auth.py
src/geoguessr_mcp/models/: Achievement.py  DailyChallenge.py  Game.py  RoundGuess.py  SeasonStats.py  UserProfile.py  UserStats.py  __init__.py  achievement.py  daily_challenge.py  game.py  profile.py  round_guess.py  user_profile.py
src/geoguessr_mcp/monitoring/: __init__.py  endpoint_monitor.py  schema_manager.py
src/geoguessr_mcp/monitoring/endpoint/: EndpointDefinition.py  EndpointMonitor.py  EndpointMonitoringResult.py  endpoint_monitor.py  endpoint_monitoring_result.py
src/geoguessr_mcp/monitoring/schema/: EndpointSchema.py  SchemaDetector.py  SchemaField.py  SchemaRegistry.py  endpoint_schema.py  schema_detector.py  schema_field.py  schema_registry.py
src/geoguessr_mcp/services/: __init__.py  analysis_service.py  game_service.py  profile_service.py
src/geoguessr_mcp/tools/: __init__.py  analysis_tools.py  auth_tools.py  game_tools.py  monitoring_tools.py  profile_tools.py
src/tests/: conftest.py  test_server.py
src/tests/e2e/: test_full_workflow.py
src/tests/integration/: __init__.py  test_api_client.py  test_auth_flow.py
src/tests/unit/: __init__.py  test_profile_service.py  test_session.py
src/tests/unit/auth/: test_multi_user_session.py  test_request_context.py  test_session.py  test_user_context.py
src/tests/unit/models/: test_achievement.py  test_game.py  test_season_stats.py  test_user_profile.py  test_user_stats.py
src/tests/unit/services/: test_analysis_service.py  test_game_service.py  test_profile_service.py
tools/bruno/Geoguessr API Collection/: 1 - v4-getActivities.bru  10 - v3-getSocialBadgesUnclaimed.bru  11 - v3-getSocialEventsUnfinishedGames.bru  12 - v3-getProfilesMaps.bru  13 - v3-getMapLikes.bru  14 - v4-getStatsMe.bru  15 - v3-getProfilesStats.bru  16 - v3-getSubscriptions.bru  17 - v3-getExplorer.bru  18 - v3-postAccountsSignin.bru  19 - v3-postAccountsSignout.bru  2 - v3-getProfiles.bru  20 - v4-getTrophiesUser.bru  21 - v3-getGamesGame.bru  22 - v3-getSocialMapsBrowsePopularRandom.bru  23_1 - v3-getChallengesDailyChallengesToday.bru  23_2 - v3-getChallengesDailyChallengesPrevious.bru  24 - v3-getChallengesChallenge.bru  28 - v3-getExperiments.bru  3 - v4-getNotifications.bru  30 - maps-getMap.bru  31 - game-server-getBattleRoyaleGame.bru  32 - game-server-getLobbyGame.bru  35 - game-server-getTournaments.bru  4 - v3-getFriends.bru  5 - v3-getFriendsSummary.bru  6 - v3-getFriendships.bru  9 - v3-getPersonalizedMap.bru  README (Docs).bru  bruno.json  getProfiles.bru
tools/bruno/Geoguessr API Collection/Geoguessr API/: 1 - v4-getActivities.bru  10 - v3-getSocialBadgesUnclaimed.bru  11 - v3-getSocialEventsUnfinishedGames.bru  12 - v3-getProfilesMaps.bru  13 - v3-getMapLikes.bru  14 - v4-getStatsMe.bru  15 - v3-getProfilesStats.bru  16 - v3-getSubscriptions.bru  (+22 more)
(+20 files in other folders)
